add German Pig Latin hellos

--- a/hello-world.html
+++ b/hello-world.html
@@ -12,4 +12,6 @@
   <li> French: Bonjour, monde! </li>
   <li> Kinyarwanda: Mwirwe, isi! </li>
   <li> Philadelphia: Get outta here!!</li>
+  <li> German: Guten tag, Welt! </li>
+  <li> Pig Latin: ello-hay, orld-way! </li>
 </ul>
